--- a/rocky-pointa.html
+++ b/rocky-pointa.html
@@ -87,13 +87,13 @@
 	<div class="header-space"></div>
     <!-- Header Section End -->
 	<!-- Breadcrumbs Start -->
-	<div class="pages-header bg-color-2">
+	<div class="pages-header bg-color-1">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-xs-12">
-					<div class="page-title ptb-110">
-						<h1 class="mb-15">Evening At Rocky Point</h1>
-						<h4 class="mb-5">Big Sur, California</h4>
+					<div class="page-title">
+						<h1 class="mb-15">R M Hunt Fine Art</h1>
+						<h4 class="mb-5"></h4>
 					</div>
 				</div>
 			</div>
@@ -113,7 +113,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8 mobile-mb-30">
 					<div class="portfolio-info pr-35">
-						<h2></h2>
+						<h2>Evening At Rocky Point | Big Sur California</h2>
 						<p class="mb-30">The first Europeans to sight the Big Sur coast were Spanish mariners led by Juan Cabrillo in 1542, though they did not land. British explorer George Vancouver described the area in 1793 as a "small, high, rocky lump of land" near the shore.</p>
 						<p>Rocky Point is on Highway 1 about 10 miles south of Carmel in Big Sur. The area's isolation was significant until the completion of Highway 1 in 1937, which opened up the Big Sur coast to visitors and made sites like Rocky Point more accessible.</p>
 					</div>
