--- a/rocky-pointa.html
+++ b/rocky-pointa.html
@@ -101,19 +101,19 @@
 	</div>
 	<!-- Breadcrumbs End -->
 	<!-- Portfolio Details Section Start -->
-	<div class="portfolio-details light-bg section-padding">
+	<div class="portfolio-details light-bg ptb-30">
 		<div class="container">
 			<div class="row text-center pb-90">
 				<div class="col-xs-12">
 					<div class="portfolio-image">
-						<img src="https://roberthunt.com/images/rockypoint_large.jpg" alt="MiniPo" />
+						<img src="https://roberthunt.com/images/rockypoint_large.jpg" alt="Rocky Point" />
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-8 mobile-mb-30">
 					<div class="portfolio-info pr-35">
-						<h2>Evening At Rocky Point | Big Sur California</h2>
+						<h3>Evening At Rocky Point | Big Sur California</h3>
 						<p class="mb-30">The first Europeans to sight the Big Sur coast were Spanish mariners led by Juan Cabrillo in 1542, though they did not land. British explorer George Vancouver described the area in 1793 as a "small, high, rocky lump of land" near the shore.</p>
 						<p>Rocky Point is on Highway 1 about 10 miles south of Carmel in Big Sur. The area's isolation was significant until the completion of Highway 1 in 1937, which opened up the Big Sur coast to visitors and made sites like Rocky Point more accessible.</p>
 					</div>
