--- a/selected-works.html
+++ b/selected-works.html
@@ -104,7 +104,7 @@
 	</div>
 	<!-- Slider Section End -->
     <!-- Portfolio Section Start -->
-    <div class="portfolio-area portfolio-five white-bg section-padding clearfix">
+    <div class="portfolio-area portfolio-five white-bg ptb-30 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
