--- a/glacier-point.html
+++ b/glacier-point.html
@@ -106,7 +106,7 @@
 			<div class="row text-center pb-90">
 				<div class="col-xs-12">
 					<div class="portfolio-image">
-						<img src="https://roberthunt.com/images/gp_large.jpg" height="500px" width="700px" alt="Rocky Point" />
+						<img src="https://roberthunt.com/images/gp_700.jpg" alt="Glacier Point" />
 					</div>
 				</div>
 			</div>
