--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -75,7 +75,7 @@ form { max-width:100%; margin:50px auto;
 		<div class="arlo_tm_topbar">
 			<div class="topbar_inner">
 				<div class="logo" data-type="avatar"> <!-- You can set your own avatar or image or text as a logo. data-type values are: "avatar", "image", "text" -->
-					<div class="avatar" data-img-url="img/about/1.jpg"></div>
+					<div class="avatar" data-img-url="https://roberthunt.com/images/mypict.jpg"></div>
 					<div class="image"><img src="img/logo/logo.png" alt="" /></div>
 					<div class="text"><h3>ARLO</h3></div>
 				</div>
@@ -92,7 +92,7 @@ form { max-width:100%; margin:50px auto;
 			<div class="inner">
 				<div class="wrapper">
 					<div class="logo" data-type="avatar"> <!-- You can set your own avatar or image or text as a logo. data-type values are: "avatar", "image", "text" -->
-						<div class="avatar" data-img-url="img/about/1.jpg"></div>
+						<div class="avatar" data-img-url="https://roberthunt.com/images/mypict.jpg"></div>
 						<div class="image"><img src="img/logo/logo.png" alt="" /></div>
 						<div class="text"><h3>ARLO</h3></div>
 					</div>
