--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -172,7 +172,7 @@ form { max-width:100%; margin:50px auto;
 				<div id="home" class="arlo_tm_section animated">
 					<div class="arlo_tm_home">
 						<div class="content">
-						<div><img src="https://roberthunt.com/images/front.jpg"><br><br></div>
+						<div><img src="https://roberthunt.com/images/front.JPG"><br><br></div>
 							<h3></h3>
 							
 							<!--<div class="animateText">-->
