--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -101,7 +101,7 @@ form { max-width:100%; margin:50px auto;
 							<li class="active"><a href="#home">Home</a></li>
 							<li><a href="#about">About</a></li>
 							<!--<li><a href="#services">Services</a></li>-->
-							<li><a href="#portfolio">Portfolio</a></li>
+							<li><a href="<li><a href="#about">About</a></li>>Portfolio</a></li>
 							<!--<li><a href="#blog">Blog</a></li>-->
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -172,7 +172,8 @@ form { max-width:100%; margin:50px auto;
 				<div id="home" class="arlo_tm_section animated">
 					<div class="arlo_tm_home">
 						<div class="content">
-						<div><img src="https://roberthunt.com/images/front.JPG"><br><br></div>
+						<div><br><br><img src="https://roberthunt.com/images/front.JPG"><br><br></div>
+						
 							<h3></h3>
 							
 							<!--<div class="animateText">-->
