--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ span.email b {
 				<div class="logo" data-type="avatar"> <!-- You can set your own avatar or image or text as a logo. data-type values are: "avatar", "image", "text" -->
 					<div class="avatar" data-img-url="https://roberthunt.com/images/rmh.png"></div>
 					<div class="image"><img src="" alt="RMH" /></div>
-					<div class="text"><h3>ARLO</h3></div>
+					<div class="text"><h3></h3></div>
 				</div>
 				<div class="trigger">
 					<div class="hamburger hamburger--slider">
@@ -99,7 +99,7 @@ span.email b {
 					<div class="logo" data-type="avatar"> <!-- You can set your own avatar or image or text as a logo. data-type values are: "avatar", "image", "text" -->
 						<div class="avatar" data-img-url="https://roberthunt.com/images/mypict.jpg"></div>
 						<div class="image"><img src="img/logo/logo.png" alt="" /></div>
-						<div class="text"><h3>ARLO</h3></div>
+						<div class="text"><h3></h3></div>
 					</div>
 					<div class="menu_list">
 						<ul class="transition_link">
@@ -150,12 +150,12 @@ span.email b {
 					</ul>
 				</div>
 				<div class="copyright">
-					<p>Copyright &copy; R M Hunt Fine Art <a class="line_effect" href="#"></a></p>
-					<p>All rights are reserved</p>
+					<p>&copy; R M Hunt Fine Art <a class="line_effect" href="#"></a></p>
+					<p>Please Share:</p>
 				</div>
 				<div class="social">
-				<span>Please Share:</span>
-					<ul><br>
+				<span></span>
+					<ul>
 						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>&nbsp
 						<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank"><img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
 					    <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/in14.png" alt="LinkedIn"></a></li>&nbsp
