--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ span.email b {
 						<!--<li><a href="#services">Services</a></li>-->
 						<li><a href="#portfolio">Portfolio</a></li>
 						<!--<li><a href="#blog">Blog</a></li>-->
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#contact">Connect</a></li>
 					</ul>
 				</div>
 				<div class="copyright">
