--- a/contact-us.html
+++ b/contact-us.html
@@ -55,7 +55,7 @@ textarea {
 
 [type="submit"] {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  width: 70%;
+  width: 40%;
   background:#464e61;
   border-radius:5px;
   border:0;
@@ -177,7 +177,7 @@ span.email b {
 				<div class="col-xs-12">
 					<div class="page-title ptb-15">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">contact us</h4>
+						<h4 class="mb-5">Get In Touch</h4>
 					</div>
 				</div>
 			</div>
