--- a/contact-us.html
+++ b/contact-us.html
@@ -241,7 +241,7 @@ span.email b {
             >
               Send Message
             </button>
-          </div>
+          </div><br>
           <p class="text-base text-center text-gray-400" id="result"></p>
         </form>
       </div>
